Eliminación de directorio Mobile